--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=https://60a138c1-736a-4062-961f-58a9acbbbf3c.preview.emergentagent.com
